--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ button:hover{
 
 <script>
 const SUPABASE_URL = "https://ilxwqmxqptkhapmvvasm.supabase.co";
-const SUPABASE_ANON_KEY = "YOUR_ANON_KEY_HERE";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlseHdxbXhxcHRraGFwbXZ2YXNtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU4Mzg3NzIsImV4cCI6MjA4MTQxNDc3Mn0.wV4mgUS_6oUsGdUNJRKvL3wewvan4LusbnC2twhYYnw";
 const HOME_PAGE = "https://sites.google.com/view/queenscake/home";
 
 const supabaseClient = supabase.createClient(
